2005-01-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDicomDir.cxx : simplify the NewPatient method, like made in
     gdcm::DicomDirPatient, gdcm::DicomDirStudy, gdcm::DicomDirSerie

2005-01-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmSQItem[h|cxx] : rename some methods to have coherent names

2005-01-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDicomDir*.[h|cxx] : rename methods to be logik in their name.
     Remove all access to the hash-tables or lists in the objects.

2005-01-20 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDebug.h : remove the Debug test in the gdcmErrorMacro
   * src/gdcmDocument.[h|cxx] : rename the Initialise method to Initialize, to
     be complient with all the gdcm source code

2005-01-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * src/gdcmDocEntry.h : DocEntry is now secure. User can't change the
     DictEntry or the VR.

2005-01-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * gdcmPython/ : change GDCM_DATA_PATH to GDCM_DATA_ROOT to be complient with
     all in gdcm

2005-01-19 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ : rename VTK tests to have a best name for the tests
   * gdcmPython/demo/*.py.in : Change the InitTraversal/GetNextEntry use to
     GetFirstEntry/GetNextEntry use

2005-01-18 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
   * Test/ShowDicom.cxx, ShowDicomSeq.cxx, TestWriteWithVTK.cxx : change the
     test. Now it's on image content and not on the resulting visualisation...
     might solve the problem on linux when using the OpenGL drivers

2005-01-18 Jean-Pierre Roux <jpr@creatis.univ-lyon1.fr>
   * ENH for DicomDir, DicomDirPatient, DicomDirStudy, 
	          DicomDirSerie, DicomDirImage
	          Dict, DictSet classes :
         -add method GetFirstEntry to replace call to InitTraversal+GetNextEntry
         -remove InitTraversal method.