@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmDicomDirMeta.h,v $
   Language:  C++
-  Date:      $Date: 2005/01/16 04:50:41 $
-  Version:   $Revision: 1.16 $
+  Date:      $Date: 2005/01/20 16:16:42 $
+  Version:   $Revision: 1.17 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -32,7 +32,7 @@ namespace gdcm
 class GDCM_EXPORT DicomDirMeta : public DicomDirObject 
 {
 public:
-   DicomDirMeta(); 
+   DicomDirMeta(bool empty=false); 
    ~DicomDirMeta();
 
    virtual void Print(std::ostream &os = std::cout, std::string const & indent = "" );
